// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<fieldset>
  <legend data-weight="medium">
    Utdanningsnivå
  </legend>
  <p data-variant="default">
    Velg det høyeste utdanningsnivået du har fullført.
  </p>
  <div>
    <input
      id="components-radio--controlled-kindergarten"
      type="radio"
      value="kindergarten"
      name="«r5»"
    >
    <label
      data-weight="regular"
      for="components-radio--controlled-kindergarten"
    >
      Barnehage
    </label>
  </div>
  <div>
    <input
      id="components-radio--controlled-primary"
      type="radio"
      value="primary"
      name="«r5»"
    >
    <label
      data-weight="regular"
      for="components-radio--controlled-primary"
    >
      Grunnskole
    </label>
  </div>
  <div>
    <input
      id="components-radio--controlled-secondary"
      type="radio"
      value="secondary"
      name="«r5»"
    >
    <label
      data-weight="regular"
      for="components-radio--controlled-secondary"
    >
      Videregående
    </label>
  </div>
  <div>
    <input
      id="components-radio--controlled-higher"
      type="radio"
      value="higher"
      name="«r5»"
    >
    <label
      data-weight="regular"
      for="components-radio--controlled-higher"
    >
      Høyere utdanning
    </label>
  </div>
</fieldset>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin-block: var(--ds-size-2);"
>
  Du har valgt:
</p>
<div
  data-size="sm"
  style="display: flex; gap: 1rem;"
>
  <button
    data-variant="secondary"
    type="button"
  >
    Velg Barnehage
  </button>
  <button
    data-variant="secondary"
    type="button"
  >
    Velg Grunnskole
  </button>
</div>
`;

exports[`Disabled 1`] = `
<fieldset>
  <legend data-weight="medium">
    Velg din aldersgruppe.
  </legend>
  <p data-variant="default">
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <div>
    <input
      id="components-radio--disabled-10-20"
      disabled
      type="radio"
      value="10-20"
      name="my-disabled"
    >
    <label
      data-weight="regular"
      for="components-radio--disabled-10-20"
    >
      10-20 år
    </label>
  </div>
  <div>
    <input
      id="components-radio--disabled-21-45"
      disabled
      type="radio"
      value="21-45"
      name="my-disabled"
    >
    <label
      data-weight="regular"
      for="components-radio--disabled-21-45"
    >
      21-45 år
    </label>
  </div>
  <div>
    <input
      id="components-radio--disabled-46-80"
      disabled
      type="radio"
      value="46-80"
      name="my-disabled"
    >
    <label
      data-weight="regular"
      for="components-radio--disabled-46-80"
    >
      46-80 år
    </label>
  </div>
  <p
    data-field="validation"
    hidden
    id="«r6»"
  >
  </p>
</fieldset>
`;

exports[`Focused 1`] = `
<div>
  <input
    id="radio-preview"
    type="radio"
    value="value"
    aria-describedby="radio-preview:description:1"
  >
  <label
    data-weight="regular"
    for="radio-preview"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="radio-preview:description:1"
  >
    Description
  </div>
</div>
`;

exports[`Group 1`] = `
<fieldset>
  <legend data-weight="medium">
    Velg din aldersgruppe.
  </legend>
  <p data-variant="default">
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <div>
    <input
      id="components-radio--group-10-20"
      type="radio"
      value="10-20"
      name="my-group"
    >
    <label
      data-weight="regular"
      for="components-radio--group-10-20"
    >
      10-20 år
    </label>
  </div>
  <div>
    <input
      id="components-radio--group-21-45"
      type="radio"
      value="21-45"
      name="my-group"
    >
    <label
      data-weight="regular"
      for="components-radio--group-21-45"
    >
      21-45 år
    </label>
  </div>
  <div>
    <input
      id="components-radio--group-46-80"
      type="radio"
      value="46-80"
      name="my-group"
    >
    <label
      data-weight="regular"
      for="components-radio--group-46-80"
    >
      46-80 år
    </label>
  </div>
  <p
    data-field="validation"
    hidden
    id="«r0»"
  >
  </p>
</fieldset>
`;

exports[`Inline 1`] = `
<fieldset>
  <legend data-weight="medium">
    Kontaktes på e-post?
  </legend>
  <p data-variant="default">
    Bekreft om du ønsker å bli kontaktet per e-post.
  </p>
  <div style="display: flex; flex-wrap: wrap; gap: var(--ds-size-6);">
    <div>
      <input
        id="undefined-inline-ja"
        type="radio"
        value="ja"
        name="my-inline"
      >
      <label
        data-weight="regular"
        for="undefined-inline-ja"
      >
        Ja
      </label>
    </div>
    <div>
      <input
        id="undefined-inline-nei"
        type="radio"
        value="nei"
        name="my-inline"
      >
      <label
        data-weight="regular"
        for="undefined-inline-nei"
      >
        Nei
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`Preview 1`] = `
<div>
  <input
    id="radio-preview"
    type="radio"
    value="value"
    aria-describedby="radio-preview:description:1"
  >
  <label
    data-weight="regular"
    for="radio-preview"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="radio-preview:description:1"
  >
    Description
  </div>
</div>
`;

exports[`Radio In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <div>
    <input
      id="radio-in-color-context"
      type="radio"
      checked
      aria-describedby="radio-in-color-context:description:1"
    >
    <label
      data-weight="regular"
      for="radio-in-color-context"
    >
      Radio
    </label>
    <div
      data-field="description"
      id="radio-in-color-context:description:1"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`Read Only 1`] = `
<fieldset>
  <legend data-weight="medium">
    Velg din aldersgruppe.
  </legend>
  <p data-variant="default">
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <div>
    <input
      id="components-radio--read-only-10-20"
      readonly
      type="radio"
      value="10-20"
      name="my-readonly"
    >
    <label
      data-weight="regular"
      for="components-radio--read-only-10-20"
    >
      10-20 år
    </label>
  </div>
  <div>
    <input
      id="components-radio--read-only-21-45"
      readonly
      type="radio"
      value="21-45"
      name="my-readonly"
    >
    <label
      data-weight="regular"
      for="components-radio--read-only-21-45"
    >
      21-45 år
    </label>
  </div>
  <div>
    <input
      id="components-radio--read-only-46-80"
      readonly
      type="radio"
      value="46-80"
      name="my-readonly"
    >
    <label
      data-weight="regular"
      for="components-radio--read-only-46-80"
    >
      46-80 år
    </label>
  </div>
  <p
    data-field="validation"
    hidden
    id="«r8»"
  >
  </p>
</fieldset>
`;

exports[`With Error 1`] = `
<fieldset>
  <legend data-weight="medium">
    Velg din aldersgruppe.
  </legend>
  <p data-variant="default">
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <div>
    <input
      id="components-radio--with-error-10-20"
      aria-describedby="«r2»"
      aria-invalid="true"
      type="radio"
      value="10-20"
      name="my-error"
    >
    <label
      data-weight="regular"
      for="components-radio--with-error-10-20"
    >
      10-20 år
    </label>
  </div>
  <div>
    <input
      id="components-radio--with-error-21-45"
      aria-describedby="«r2»"
      aria-invalid="true"
      type="radio"
      value="21-45"
      name="my-error"
    >
    <label
      data-weight="regular"
      for="components-radio--with-error-21-45"
    >
      21-45 år
    </label>
  </div>
  <div>
    <input
      id="components-radio--with-error-46-80"
      aria-describedby="«r2»"
      aria-invalid="true"
      type="radio"
      value="46-80"
      name="my-error"
    >
    <label
      data-weight="regular"
      for="components-radio--with-error-46-80"
    >
      46-80 år
    </label>
  </div>
  <p
    data-field="validation"
    id="«r2»"
  >
    Du må velge en aldersgruppe
  </p>
</fieldset>
`;
